# Cours_Open_Data_Projet_G01

./: .env.example  CHANGELOG.md  README.md  Streamlit_carte_app.txt  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
docs/: GUIDE_INTEGRATION_COMPLET.md  evaluation_complete_projet.md  fonctionnalites_interessantes.md
utils/: charts.py  chatbot.py  data.py  data_enhanced.py  map_viz.py  pricing.py
